--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,5 +2,8 @@
   "extends": [
     "stylelint-config-recommended",
     "stylelint-config-styled-components"
-  ]
+  ],
+  "rules": {
+    "no-duplicate-selectors": null,
+  }
 }
