--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "use-shopping-cart": "^2.3.0"
   },
   "devDependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.2",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
